--- a/index.html
+++ b/index.html
@@ -1652,7 +1652,10 @@
   });
 </script>
 <!-- Google Translate -->
-<div id="google_translate_element" class="fixed top-10 Center-1/5 transform -translate-x-1/5 z-50"></div>
+<div class="absolute top-full left-0 mt-2 z-50 bg-black bg-opacity-0 p-2 rounded shadow">
+  <div id="google_translate_element"></div>
+</div>
+
 <script>
   function googleTranslateElementInit() {
     new google.translate.TranslateElement({
